[package]
name = "rasm"
version = "0.0.0"
description = "Data-Oriented 3D WebGPU Game Engine Written in Rust WebAssembly."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Fereydoun Memarzanjany <F_Memarzanjany@outlook.com>"]
homepage = "https://VioletVillain.github.io/RASM/"
repository = "https://github.com/VioletVillain/RASM"
documentation = "https://github.com/VioletVillain/RASM/wiki"
edition = "2018"
publish = true
keywords = ["rasm", "graphics", "3D", "game", "engine"]
categories = ["multimedia", "webAssembly", "concurrency", "graphics", "game-engines"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.58"
web-sys = { version = "0.3.35", features = [
  "console",
]}
  

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
rpath = false