[package]
name = "rasm"
version = "0.0.0"
description = "3D Ray-Tracing WebGPU Game Engine Written in Rust WebAssembly."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Fereydoun Memarzanjany <F_Memarzanjany@outlook.com>"]
homepage = "https://VioletVillain.github.io/RASM/"
repository = "https://github.com/VioletVillain/RASM"
documentation = "https://github.com/VioletVillain/RASM/wiki"
edition = "2018"
publish = true
keywords = ["rasm", "graphics", "3D", "game", "engine"]
categories = ["no-std", "wasm", "concurrency", "graphics", "game-engines"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "rasm"
path = "src/lib.rs"

[dependencies]
web-sys = { version = "0.3.37", features = [
  "console",
  #"WebGpu",
  #"WebGpuDevice",
]}
  
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
