[package]
name = "rasm"
version = "0.0.0"
description = "3D Ray-Tracing WebGPU Game Engine Written in Rust WebAssembly."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Fereydoun Memarzanjany <F_Memarzanjany@outlook.com>"]
homepage = "https://VioletVillain.github.io/RASM/"
repository = "https://github.com/VioletVillain/RASM"
documentation = "https://github.com/VioletVillain/RASM/wiki"
edition = "2018"
publish = true
keywords = ["raytracing", "graphics", "3D", "game", "engine"]
categories = ["rendering::engine", "wasm", "concurrency", "graphics", "game-engines"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "rasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
harness = false
test = true
doctest = true
doc = true

[dependencies]
rayon =  "1.3.0"
legion = { version = "0.2.1", default-features = false, features = [
  "par-iter",
  "par-schedule",
]}
web-sys = { version = "0.3.37", features = [
  "console",
  #"WebGpu",
  #"WebGpuDevice",
]}
  
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
rpath = false